# chip8asm

./: .gitignore  README.md  pyproject.toml  scripts.py
chip8asm/: assembler.py  disassembler.py
tests/: test_assembler.py  test_disassembler.py
